Implemented k-coverage method